fix(pick-list-item): fix text wrapping and not wrapping. Reset unrelated change. (#430 #439)

--- a/src/assets/styles/_mixins.scss
+++ b/src/assets/styles/_mixins.scss
@@ -16,7 +16,7 @@
 @mixin lineClamp($lines: 2) {
   display: -webkit-box;
   overflow: hidden;
-  word-break: break-all;
+  word-break: normal;
   -webkit-line-clamp: $lines;
   -webkit-box-orient: vertical;
 }
